--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
@@ -51,7 +51,7 @@
           </button>
         </div>
       </div>
-      <table id="dataTable" class="ui small celled table striped selectable">
+      <table id="dataTable" class="ui small celled table striped selectable" style="width: 100%;">
         <thead>
           <tr>
             <th>ที่</th>
@@ -71,11 +71,11 @@
           <div class="sixteen wide field ">
             <div class="five wide field "></div>
             <button class="ui mini primary button" (click)="queryColumnNameListAndSetColumn()">
-              <i class="table icon"></i>
+              <i class="eye icon"></i>
               รายละเอียดปัจจัยเสี่ยงรวมประจำปี
             </button>
             <button class="ui mini primary button" (click)="queryTableInt080313()">
-              <i class="table icon"></i>
+              <i class="eye icon"></i>
               รายละเอียดผลการปราบปรามประจำปี
             </button>
 
@@ -150,7 +150,7 @@
 
 
         <div class="inline fields">
-          <table id="dataTableF1" class="ui small celled table striped selectable">
+          <table id="dataTableF1" class="ui small celled table striped selectable" style="width: 100%;">
             <thead>
               <tr>
 
@@ -174,13 +174,13 @@
         </div>
         <div class="ui center aligned grid">
           <div class="sixteen wide column">
-            <button class="ui mini primary button">
-              <i class=" add icon "></i>
+            <button class="ui mini yellow button">
+              <i class=" print icon "></i>
               ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
-
-              กลับ
+              <i class=" remove icon "></i>
+              ยกเลิก
             </button>
 
           </div>
@@ -255,7 +255,7 @@
 
 
         <div class="inline fields">
-          <table id="dataTableF2" class="ui small celled table striped selectable">
+          <table id="dataTableF2" class="ui small celled table striped selectable" style="width: 100%;">
             <thead>
               <tr>
                 <th rowspan="2" style="text-align: center !important">ลำดับ</th>
@@ -275,12 +275,12 @@
         </div>
         <div class="ui center aligned grid">
           <div class="sixteen wide column">
-            <button class="ui mini primary button">
-              <i class=" add icon "></i>
+            <button class="ui mini yellow button">
+              <i class=" print icon "></i>
               ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
-
+              <i class=" remove icon "></i>
               กลับ
             </button>
 
@@ -353,7 +353,7 @@
 
 
         <div class="inline fields">
-          <table id="dataTable_int08_3_6" class="ui small celled table striped selectable">
+          <table id="dataTable_int08_3_6" class="ui small celled table striped selectable" style="width: 100%;">
             <thead>
               <tr>
 
@@ -378,12 +378,12 @@
         </div>
         <div class="ui center aligned grid">
           <div class="sixteen wide column">
-            <button class="ui mini primary button">
-              <i class=" add icon "></i>
+            <button class="ui mini yellow button">
+              <i class=" print icon "></i>
               ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
-
+              <i class=" remove icon "></i>
               กลับ
             </button>
 
@@ -457,7 +457,7 @@
 
 
         <div class="inline fields">
-          <table id="dataTable_int08_3_7" class="ui small celled table striped selectable">
+          <table id="dataTable_int08_3_7" class="ui small celled table striped selectable" style="width: 100%;">
             <thead>
               <tr>
 
@@ -482,12 +482,12 @@
         </div>
         <div class="ui center aligned grid">
           <div class="sixteen wide column">
-            <button class="ui mini primary button">
-              <i class=" add icon "></i>
+            <button class="ui mini yellow button">
+              <i class=" print icon "></i>
               ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
-
+              <i class=" remove icon "></i>
               กลับ
             </button>
 
@@ -562,7 +562,7 @@
 
 
         <div class="inline fields">
-          <table id="dataTable_int08_3_8" class="ui small celled table striped selectable">
+          <table id="dataTable_int08_3_8" class="ui small celled table striped selectable" style="width: 100%;">
             <thead>
               <tr>
 
@@ -587,12 +587,12 @@
         </div>
         <div class="ui center aligned grid">
           <div class="sixteen wide column">
-            <button class="ui mini primary button">
-              <i class=" add icon "></i>
+            <button class="ui mini yellow button">
+              <i class=" print icon "></i>
               ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
-
+              <i class=" remove icon "></i>
               กลับ
             </button>
 
@@ -666,7 +666,7 @@
 
 
         <div class="inline fields">
-          <table id="dataTable_int08_3_9" class="ui small celled table striped selectable">
+          <table id="dataTable_int08_3_9" class="ui small celled table striped selectable" style="width: 100%;">
             <thead>
               <tr>
 
@@ -688,12 +688,12 @@
         </div>
         <div class="ui center aligned grid">
           <div class="sixteen wide column">
-            <button class="ui mini primary button">
-              <i class=" add icon "></i>
+            <button class="ui mini yellow button">
+              <i class=" print icon "></i>
               ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
-
+              <i class=" remove icon "></i>
               กลับ
             </button>
 
@@ -767,7 +767,7 @@
 
 
         <div class="inline fields">
-          <table id="dataTable_int08_3_10" class="ui small celled table striped selectable">
+          <table id="dataTable_int08_3_10" class="ui small celled table striped selectable" style="width: 100%;">
             <thead>
               <tr>
 
@@ -789,12 +789,12 @@
         </div>
         <div class="ui center aligned grid">
           <div class="sixteen wide column">
-            <button class="ui mini primary button">
-              <i class=" add icon "></i>
+            <button class="ui mini yellow button">
+              <i class=" print icon "></i>
               ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
-
+              <i class=" remove icon "></i>
               กลับ
             </button>
 
@@ -869,7 +869,7 @@
 
 
         <div class="inline fields">
-          <table id="dataTable_int08_3_11" class="ui small celled table striped selectable">
+          <table id="dataTable_int08_3_11" class="ui small celled table striped selectable" style="width: 100%;">
             <thead>
               <tr>
 
@@ -891,12 +891,12 @@
         </div>
         <div class="ui center aligned grid">
           <div class="sixteen wide column">
-            <button class="ui mini primary button">
-              <i class=" add icon "></i>
+            <button class="ui mini yellow button">
+              <i class=" print icon "></i>
               ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
-
+              <i class=" remove icon "></i>
               กลับ
             </button>
 
@@ -970,7 +970,7 @@
 
 
         <div class="inline fields">
-          <table id="dataTable_int08_3_12" class="ui small celled table striped selectable">
+          <table id="dataTable_int08_3_12" class="ui small celled table striped selectable" style="width: 100%;">
             <thead id="trColumn">
             </thead>
             <tbody id="tbody">
@@ -980,12 +980,12 @@
         </div>
         <div class="ui center aligned grid">
           <div class="sixteen wide column">
-            <button class="ui mini primary button">
-              <i class=" add icon "></i>
+            <button class="ui mini yellow button">
+              <i class=" print icon "></i>
               ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
-
+              <i class=" remove icon "></i>
               กลับ
             </button>
 
@@ -1059,7 +1059,7 @@
 
 
 
-        <table id="dataTable_int08_3_13" class="ui small celled table striped selectable">
+        <table id="dataTable_int08_3_13" class="ui small celled table striped selectable" style="width: 100%;">
           <thead>
             <tr>
               <th rowspan="2" style="text-align: center !important">ลำดับ</th>
@@ -1083,12 +1083,12 @@
 
         <div class="ui center aligned grid">
           <div class="sixteen wide column">
-            <button class="ui mini primary button">
-              <i class=" add icon "></i>
+            <button class="ui mini yellow button">
+              <i class=" print icon "></i>
               ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
-
+              <i class=" remove icon "></i>
               กลับ
             </button>
 
