--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-1-1/int06-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-1-1/int06-1-1.component.html
@@ -61,7 +61,7 @@
             <table id="dataTable" class="ui small celled table nowrap striped selectable" style="width: 100%">
                 <thead>
                     <tr>
-                        <th style="text-align: center !important;" rowspan="2">ลำดับ</th>
+                        <th style="text-align: center !important;" rowspan="2">ลำดับที่</th>
                         <th style="text-align: center !important;" colspan="2">บัญชีแยกประเภท</th>
                         <th style="text-align: center !important;" rowspan="2">ยอดยกมา</th>
                         <th style="text-align: center !important;" rowspan="2">เดบิต</th>
