--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-1-2/int06-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-1-2/int06-1-2.component.html
@@ -60,9 +60,9 @@
             <table id="dataTable" class="ui small celled table nowrap striped selectable" style="width: 100%">
                 <thead>
                     <tr style="text-align: center;">
-                        <th>ลำดับ</th>
+                        <th>ลำดับที่</th>
                         <th>เลขที่บัญชี</th>
-                        <th>บัญชี</th>
+                        <th>ชื่อบัญชี</th>
                         <th style="text-align:center !important">จำนวนเงินในสกุลในปท.</th>
                     </tr>
                 </thead>
