--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-9/int06-9-1/int06-9-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-9/int06-9-1/int06-9-1.component.html
@@ -10,29 +10,29 @@
                 <div class="ui form {{ loading ? 'loading' : '' }}">
                     <div class="inline fields">
                         <div class="one wide field "></div>
-                        <div class="two wide field ">
+                        <div class="two wide field  ">
                             <label>เอกสารอ้างอิง :</label>
                         </div>
-                        <div class="one wide field ">
+                        <div class="one wide field required">
                             <label>ที่ กค</label>
                         </div>
                         <div class="three wide field " [ngClass]="{ 'error': submitted && f.mofNum.errors }">
                             <input type="text" formControlName="mofNum" [ngClass]="{ 'is-invalid': submitted && f.mofNum.errors }">
                         </div>
-                        <div class="one wide field ">
+                        <div class="one wide field required">
                             <label class="custom-label-w-25 text-right">เลขที่</label>
                         </div>
                         <div class="three wide field " [ngClass]="{ 'error': submitted && f.refNum.errors }">
                             <input type="number" formControlName="refNum">
                         </div>
-                        <div class="two wide field text-right">
+                        <div class="two wide field required text-right">
                             <label class="custom-label-w-25 text-right">วันที่เอกสาร</label>
                         </div>
                         <div class="three wide field" [ngClass]="{ 'error': submitted && f.refDate.errors }">
                             <div class="ui calendar" id="calendar" style="width:100%">
                                 <div class="ui input left icon">
                                     <i class="calendar alter nate outline icon"></i>
-                                    <input type="text" formControlName="refDate" id="refDate" autocomplete="off" readonly="">
+                                    <input type="text" placeholder="วว/ดด/ปปปป" formControlName="refDate" id="refDate" autocomplete="off" readonly="">
                                 </div>
                             </div>
                         </div>
@@ -40,22 +40,22 @@
 
                     <div class="inline fields">
                         <div class="one wide field "></div>
-                        <div class="two wide field ">
+                        <div class="two wide field required">
                             <label>รายการโอนเงิน</label>
                         </div>
                         <div class="four wide field" [ngClass]="{ 'error': submitted && f.transferList.errors }">
                             <select class="ui search dropdown ai search" formControlName="transferList" id="transferList">
-                                <option value="">เลือก</option>
+                                <option value="">กรุณาเลือก</option>
                                 <option *ngFor="let data of comboBox1 | async" [ngValue]="data.value1">{{data.value1}}</option>
                             </select>
                         </div>
 
-                        <div class="one wide field ">
+                        <div class="two wide field required ">
                             <label class="custom-label-w-25 text-right">ประเภทเงิน</label>
                         </div>
                         <div class="four wide field " [ngClass]="{ 'error': submitted && f.budgetType.errors }">
                             <select class="ui search dropdown ai search" formControlName="budgetType" id="budgetType">
-                                <option value="">เลือก</option>
+                                <option value="">กรุณาเลือก</option>
                                 <option *ngFor="let data of comboBox2 | async" value="{{data.value1}}">{{data.value1}}</option>
                             </select>
                         </div>
@@ -63,21 +63,21 @@
 
                     <div class="inline fields">
                         <div class="one wide field "></div>
-                        <div class="two wide field ">
+                        <div class="two wide field required ">
                             <label>งบ</label>
                         </div>
                         <div class="four wide field " [ngClass]="{ 'error': submitted && f.budget.errors }">
                             <select class="ui search dropdown ai search" formControlName="budget" id="budget" (change)="budgetChange($event)">
-                                <option value="">เลือก</option>
+                                <option value="">กรุณาเลือก</option>
                                 <option *ngFor="let data of comboBox3" value="{{data.budgetId}}">{{data.budgetName}}</option>
                             </select>
                         </div>
-                        <div class="one wide field ">
+                        <div class="two wide field required">
                             <label class="custom-label-w-25 text-right">หมวด</label>
                         </div>
                         <div class="four wide field " [ngClass]="{ 'error': submitted && f.ctgBudget.errors }">
                             <select class="ui search dropdown ai search" formControlName="ctgBudget" id="ctgBudget" (change)="ctgBudgetChange($event)">
-                                <option value="">เลือก</option>
+                                <option value="">กรุณาเลือก</option>
                                 <option *ngFor="let data of combobox4" value="{{data.categoryId}}">{{data.categoryName}}</option>
                             </select>
                         </div>
@@ -85,30 +85,39 @@
 
                     <div class="inline fields">
                         <div class="one wide field "></div>
-                        <div class="two wide field ">
+                        <div class="two wide field required ">
                             <label>หมวดย่อย</label>
                         </div>
                         <div class="four wide field" [ngClass]="{ 'error': submitted && f.subCtgBudget.errors }">
                             <select class="ui search dropdown ai search" formControlName="subCtgBudget" id="subCtgBudget">
-                                <option value="">เลือก</option>
+                                <option value="">กรุณาเลือก</option>
                                 <option *ngFor="let data of combobox5" value="{{data.listId}}">{{data.listName}}</option>
                             </select>
                         </div>
-                        <div class="one wide field ">
+                        <div class="two wide field required">
                             <label class="custom-label-w-25 text-right">กิจกรรม</label>
                         </div>
                         <div class="four wide field " [ngClass]="{ 'error': submitted && f.activities.errors }">
                             <select class="ui search dropdown ai search" formControlName="activities" id="activities">
-                                <option value="">เลือก</option>
+                                <option value="">กรุณาเลือก</option>
                                 <option *ngFor="let data of comboBox6 | async" value="{{data.value1}}">{{data.value1}}</option>
                             </select>
                         </div>
                     </div>
 
+                    <div class="inline fields">
+                        <div class="one wide field "></div>
+                            <div class="two wide field required">
+                                <label>จำนวนเงิน</label>
+                            </div>
+                            <div class="four wide field " [ngClass]="{ 'error': submitted && f.amount.errors }">
+                                <input type="number" formControlName="amount" id="amount">
+                        </div>
+                    </div>
 
                     <div class="inline fields">
                         <div class="one wide field "></div>
-                        <div class="two wide field ">
+                        <div class="two wide field required">
                             <label>คำอธิบายรายการ</label>
                         </div>
                         <div class="nine wide field " [ngClass]="{ 'error': submitted && f.descriptionList.errors }">
@@ -119,43 +128,34 @@
                     <div class="inline fields">
                         <div class="one wide field "></div>
                         <div class="two wide field ">
-                            <label>จำนวนเงิน</label>
-                        </div>
-                        <div class="four wide field " [ngClass]="{ 'error': submitted && f.amount.errors }">
-                            <input type="number" formControlName="amount" id="amount">
-                        </div>
-                    </div>
-
-                    <div class="inline fields">
-                        <div class="one wide field "></div>
-                        <div class="two wide field ">
                             <label>หมายเหตุ</label>
                         </div>
-                        <div class="nine wide field" [ngClass]="{ 'error': submitted && f.note.errors }">
+                        <div class="nine wide field">
                             <textarea rows="6" cols="10" formControlName="note" id="note"></textarea>
                         </div>
                     </div>
 
                     <div class="ui center aligned grid">
                         <div class="four wide column">
-                            <button *ngIf="flag !== 'EDIT'" class="ui mini primary button" (click)="checkStatus('SAVE')" type="submit">
-                                <i class="save icon"></i>เพิ่ม
+                            <button *ngIf="flag !== 'EDIT'" class="ui mini green button" (click)="checkStatus('SAVE')" type="submit">
+                                <i class="save icon"></i>บันทึก
                             </button>
 
-                            <button *ngIf="flag === 'EDIT'" class="ui mini green button" (click)="checkStatus('EDIT')" type="submit">
-                                <i class="save icon"></i>บันทัก
+                            <button *ngIf="flag === 'EDIT'" class="ui mini primary button" (click)="checkStatus('EDIT')" type="submit">
+                                <i class="save icon"></i>บันทึก
                             </button>
 
                             <button class="ui mini button" type="button" routerLink="/int06/9">
-                                <i class="reply icon"></i>กลับ
+                                <i class="close icon"></i>ยกเลิก
                             </button>
                         </div>
                     </div>
                 </div>
             </form>
+            </div>
 
             <div class="ui segment" id="int0621">
-                <div style="overflow-x: scroll;">
+                <div>
                     <table id="datatable" class="ui small celled table striped selectable" style="width: 150%">
                         <thead>
                             <tr style="text-align: center;">
@@ -172,29 +172,25 @@
                                 <th rowspan="2">จำนวนเงิน</th>
                                 <th rowspan="2">หมายเหตุ</th>
                             </tr>
-                            <tr>
-                                <th>วันที่ กค</th>
+                            <tr style="text-align: center;">
+                                <th>ที่ กค</th>
                                 <th>เลขที่</th>
                                 <th>ว.ด.ป</th>
                             </tr>
                         </thead>
-
                     </table>
                 </div>
                 <br>
                 <div class="ui center aligned grid">
                     <div class="sixteen wide column">
-                        <button class="ui mini primary button" (click)="onSave()"> 
+                        <button class="ui mini green button" (click)="onSave()"> 
                             <i class="save icon"></i> บันทึก
                         </button>
-
                         <button class="ui mini  button" (click)="hidedata()">
                             <i class="close icon"></i> ยกเลิก
                         </button>
                     </div>
                 </div>
-
             </div>
         </div>
-    </div>
 </div>
